add some semantic tag

--- a/14.8.023/semantic.html
+++ b/14.8.023/semantic.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Semantic Tag</title>
-</head>
-<body>
-    
-    
-</body>
+  </head>
+  <body>
+    <!-- nav is for nav bar  -->
+    <header>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>shop</li>
+        <li>about</li>
+        <li>blog</li>
+      </ul>
+    </nav>
+</header>
+    <!-- we use main for contain our page main items -->
+    <main>
+      <h1><mark>Our main items</mark></h1>
+      <details>
+        <summary>Semantic tag</summary>
+        semantic tag is a tag which have a meaning what this tag do .
+      </details>
+      <figure>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil
+          quaerat vero cupiditate perferendis veritatis rerum! Temporibus et
+          obcaecati at, iusto exercitationem voluptatum minima suscipit
+          voluptatem soluta deserunt excepturi maiores labore?
+        </p>
+        <figcaption>fig caption is a caption of figure item</figcaption>
+      </figure>
+    </main>
+    <footer>@2023 copyright</footer>
+  </body>
 </html>
