add some block and inline element

--- a/14.8.023/semantic.html
+++ b/14.8.023/semantic.html
@@ -22,11 +22,24 @@
 </header>
     <!-- we use main for contain our page main items -->
     <main>
+        <canvas>
+            <h1>helll</h1>
+        </canvas>
       <h1><mark>Our main items</mark></h1>
+
+      <section>
+        <h1>start the game</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci deserunt tempora temporibus ullam eligendi aut expedita placeat iusto iste saepe, dignissimos quaerat quibusdam quia odio rem quos provident numquam optio.</p>
+      </section>
+      <article>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates nobis, voluptatem beatae hic error libero repellat quae placeat sunt impedit! Obcaecati culpa magni et omnis rem sed, natus praesentium neque!
+      </article>
+      
       <details>
         <summary>Semantic tag</summary>
         semantic tag is a tag which have a meaning what this tag do .
       </details>
+
       <figure>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil
@@ -36,6 +49,9 @@
         </p>
         <figcaption>fig caption is a caption of figure item</figcaption>
       </figure>
+      <aside>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quo molestias recusandae mollitia sit eligendi, blanditiis necessitatibus perferendis aut, ex sed beatae modi alias iure tempore quia fugiat dicta veritatis.
+      </aside>
     </main>
     <footer>@2023 copyright</footer>
   </body>
