--- a/14.8.023/boxmodel.html
+++ b/14.8.023/boxmodel.html
@@ -8,9 +8,21 @@
 </head>
 <body>
     
-    <main>
-        <div id="box">
-            <h1>box</h1>
+    <main class="grid-container">
+        <div class="box" id="like">
+            <h1>box1</h1>
+
+        </div>
+        <div class="box">
+            <h1>box2</h1>
+
+        </div>
+        <div class="box">
+            <h1>box3</h1>
+
+        </div>
+        <div class="box">
+            <h1>box4</h1>
 
         </div>
     </main>
