--- a/15.8.023/navigatin.html
+++ b/15.8.023/navigatin.html
@@ -17,6 +17,25 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="fullSection">
+            <h1>Home</h1>
+       
+        <section id="blogSection">
+           <div class="sBlog">1</div>
+           <div class="sBlog" id="third">
+            3</div>
+           <div class="sBlog">2</div>
+           <div class="sBlog">4</div>
+           <div class="sBlog">5</div>
+           <div class="sBlog">6</div>
+           <div class="sBlog">7</div>
+           <div class="sBlog">8</div>
+           <div class="sBlog">9</div>
+           <div class="sBlog">10</div>
+        </section>
+    </section>
+    </main>
     
 </body>
 </html>
